--- a/digital-finance/index.html
+++ b/digital-finance/index.html
@@ -122,8 +122,9 @@
   <h1>RiverFlow Lu Portfolio</h1>
 
   <p>
-    Storytelling meets code. This portfolio brings together my passion for tech — from fintech and blockchain to AI and app development — with a communicator’s mindset. Whether it’s through visuals, words, or interactive media, I translate complex ideas into content that connects.
-  </p>
+With 20 years of deep fintech expertise, I’ve navigated high-pressure trading floors in New York and London, managed proprietary investment strategies, and overseen complex risk management frameworks across Luxembourg and Brussels.
+    My hands-on experience spans market dynamics, regulatory environments, and advanced financial technologies. </p><p>
+    Paired with a passion for blockchain, AI, and app development, I bring a unique communicator’s lens—transforming complex financial and technical concepts into clear, compelling narratives that engage diverse audiences.  </p>
 
   <h2>🎥 Video: Transcendance project showcase</h2>
   <p>This video published on LinkedIn offers an immersive look into the Transcendance project, final coding project at Ecole 42, highlighting its core vision, modules and technologies</p>
@@ -139,6 +140,20 @@
   <span style="font-size: 1.2rem;">ℹ️</span> Digital Finance portfolio page is under construction — coming soon
   </p>
 
+    <p>
+    Focused on the principles and practical uses of blockchain technology, this deck was created to educate and inspire learners about decentralized systems. It blends technical detail with engaging visuals to support effective digital learning.
+  </p>
+
+  <!-- Third slide deck -->
+  <div class="slides-container">
+    <iframe
+      src="https://docs.google.com/presentation/d/e/2PACX-1vTeiV4eE0lX8NW2qEie3UVY1y6NtjbsXhIfl6Btk8yVaXWfDAuWobq5RBX7DP4SJGcPVLDRksqqy6om/pubembed?start=true&loop=true&delayms=3000"
+      allowfullscreen
+      mozallowfullscreen
+      webkitallowfullscreen
+      title="Blockchain Technology Principles"
+    ></iframe>
+  </div>
 
   <h2>🙋‍♀️ About me</h2>
   <ul>
