--- a/digital-finance/index.html
+++ b/digital-finance/index.html
@@ -119,12 +119,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <h1>RiverFlow Lu Portfolio</h1>
+  <h1>RiverFlow Lu Digital Finance Portfolio</h1>
 
   <p>
-With 20 years of deep fintech expertise, I’ve navigated high-pressure trading floors in New York and London, managed proprietary investment strategies, and overseen complex risk management frameworks across Luxembourg and Brussels.
-    My hands-on experience spans market dynamics, regulatory environments, and advanced financial technologies. </p><p>
-    Paired with a passion for blockchain, AI, and app development, I bring a unique communicator’s lens—transforming complex financial and technical concepts into clear, compelling narratives that engage diverse audiences.  </p>
+  With 20 years of deep fintech expertise, I’ve navigated high-pressure trading floors in New York and London, managed proprietary investment strategies, and overseen complex risk management frameworks across Luxembourg and Brussels.
+  </p>
+
+  <p>My hands-on experience spans market dynamics, regulatory environments, and advanced financial technologies. </p>
+  <p>Paired with a passion for blockchain, AI, and app development, I bring a unique communicator’s lens—transforming complex financial and technical concepts into clear, compelling narratives that engage diverse audiences.  </p>
 
   <h2>🎥 Video: Transcendance project showcase</h2>
   <p>This video published on LinkedIn offers an immersive look into the Transcendance project, final coding project at Ecole 42, highlighting its core vision, modules and technologies</p>
