--- a/digital-finance/index.html
+++ b/digital-finance/index.html
@@ -138,10 +138,8 @@
     ></iframe>
   </div>
  
-  <p style="color:#555; font-style: italic; margin-top: -1rem; margin-bottom: 2rem; display: flex; align-items: center; justify-content: center; gap: 0.5rem; font-size: 0.95rem;">
-  <span style="font-size: 1.2rem;">ℹ️</span> Digital Finance portfolio page is under construction — coming soon
-  </p>
 
+  <h2>🎥 Video: Transcendance project showcase</h2>
     <p>
     Focused on the principles and practical uses of blockchain technology, this deck was created to educate and inspire learners about decentralized systems. It blends technical detail with engaging visuals to support effective digital learning.
   </p>
