--- a/digital-finance/index.html
+++ b/digital-finance/index.html
@@ -139,7 +139,7 @@
   </div>
  
 
-  <h2>🎥 Video: Transcendance project showcase</h2>
+  <h2>🎥 Video: Blockchain Basics Presentation</h2>
     <p>
     Focused on the principles and practical uses of blockchain technology, this deck was created to educate and inspire learners about decentralized systems. It blends technical detail with engaging visuals to support effective digital learning.
   </p>
