--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </head>
 <body>
 
-  <img src="your-photo.jpg" alt="RiverFlow Lu" class="avatar" />
+  <img src="vero.png" alt="RiverFlow Lu" class="avatar" />
 
   <h1>Welcome to RiverFlow Lu - my online portfolio</h1>
   <p>
