--- a/digital-finance/index.html
+++ b/digital-finance/index.html
@@ -115,6 +115,22 @@
         max-width: 100%;
       }
     }
+    .certs-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.cert-card {
+  background: #e6f0fa;
+  padding: 1rem;
+  border-radius: 6px;
+  box-shadow: 0 2px 6px rgba(0, 122, 204, 0.2);
+  flex: 1 1 250px;
+  min-width: 200px;
+}
+
   </style>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
 </head>
@@ -154,6 +170,23 @@
       title="Blockchain Technology Principles"
     ></iframe>
   </div>
+
+  <h2>📜 Certifications & Trainings</h2>
+<div class="certs-container">
+  <div class="cert-card">
+    <strong>AI in Finance</strong><br>
+    CFTE, Jun 2024
+  </div>
+  <div class="cert-card">
+    <strong>Blockchain & Digital Assets</strong><br>
+    Frankfurt School, Dec 2023
+  </div>
+  <div class="cert-card">
+    <strong>LHoFT Bootcamp</strong><br>
+    Luxembourg, Mar 2024
+  </div>
+  <!-- Add more as needed -->
+</div>
 
   <h2>🙋‍♀️ About me</h2>
   <ul>
