--- a/digital-finance/index.html
+++ b/digital-finance/index.html
@@ -174,16 +174,20 @@
   <h2>📜 Certifications & Trainings</h2>
 <div class="certs-container">
   <div class="cert-card">
-    <strong>AI in Finance</strong><br>
+    <strong>AI</strong><br>
     CFTE, Jun 2024
   </div>
   <div class="cert-card">
     <strong>Blockchain & Digital Assets</strong><br>
-    Frankfurt School, Dec 2023
+    <a href="blockchain technology.pdf" target="_blank" rel="noopener noreferrer">Blockchain technology</a>
+    <a href="crypto assets and tokenization.pdf" target="_blank" rel="noopener noreferrer">Crypto assets & Tokenization</a>
+
   </div>
   <div class="cert-card">
-    <strong>LHoFT Bootcamp</strong><br>
-    Luxembourg, Mar 2024
+    <strong>Finance</strong><br>
+    <a href="digital entrepreneurship.pdf" target="_blank" rel="noopener noreferrer">Digital Entrepreneurship</a>
+    <a href="finops.pdf" target="_blank" rel="noopener noreferrer">Fin Ops</a>
+
   </div>
   <!-- Add more as needed -->
 </div>
