--- a/digital-finance/index.html
+++ b/digital-finance/index.html
@@ -175,11 +175,20 @@
     ></iframe>
   </div>
 
+    <h2>📁 Projects</h2>
+<ul>
+  <li>
+    <strong>1 Python Machine Learning:</strong> Implement linear regression from scratch using gradient descent to understand how a machine learns to fit data.
+  </li>
+</ul>
+
   <h2>📜 Certifications & Trainings</h2>
   <div class="certs-container">
     <div class="cert-card">
-      <p><strong>AI</strong><br>CFTE – Jun 2024</p>
-    </div>
+        <li><a href="AI elements.pdf" target="_blank" rel="noopener noreferrer">Elements of AI - AI Demystified: from Behind the Curtain to Real-World Applications</a></li>    </div>
+        <li><a href="AI no code.pdf" target="_blank" rel="noopener noreferrer">No-Code AI: Real-World AI App Mastery</a></li>    </div>
+        <li>Statistics for Machine Learning and AIy</a></li>    </div>
+
 
     <div class="cert-card">
       <p><strong>Blockchain & Digital Assets</strong></p>
