--- a/digital-finance/index.html
+++ b/digital-finance/index.html
@@ -176,18 +176,44 @@
   </div>
 
     <h2>📁 Projects</h2>
-<ul>
-  <li>
-    <strong>1 Python Machine Learning:</strong> Implement linear regression from scratch using gradient descent to understand how a machine learns to fit data.
-  </li>
-</ul>
+    <h2>🐍 Python Machine Learning</h2>
+
+<section>
+  <h4>What I Built</h4>
+  <ul>
+    <li>A Python script to train a linear regression model using gradient descent.</li>
+    <li>Another script to load the trained model and make predictions.</li>
+    <li>Optional: data visualization and normalization tools.</li>
+  </ul>
+
+  <h4>Concepts Applied</h4>
+  <ul>
+    <li>Linear regression theory</li>
+    <li>Gradient descent optimization</li>
+    <li>Cost function: Mean Squared Error (MSE)</li>
+    <li>Basic data processing</li>
+    <li>Model persistence (saving/loading parameters)</li>
+  </ul>
+</section>
+
 
   <h2>📜 Certifications & Trainings</h2>
   <div class="certs-container">
-    <div class="cert-card">
-        <li><a href="AI elements.pdf" target="_blank" rel="noopener noreferrer">Elements of AI - AI Demystified: from Behind the Curtain to Real-World Applications</a></li>    </div>
-        <li><a href="AI no code.pdf" target="_blank" rel="noopener noreferrer">No-Code AI: Real-World AI App Mastery</a></li>    </div>
-        <li>Statistics for Machine Learning and AIy</a></li>    </div>
+    <ul>
+      <li>
+        <a href="AI elements.pdf" target="_blank" rel="noopener noreferrer">
+          Elements of AI - AI Demystified: from Behind the Curtain to Real-World Applications
+        </a>
+      </li>
+      <li>
+        <a href="AI no code.pdf" target="_blank" rel="noopener noreferrer">
+          No-Code AI: Real-World AI App Mastery
+        </a>
+      </li>
+      <li>
+        Statistics for Machine Learning and AI
+      </li>
+    </ul>
 
 
     <div class="cert-card">
