--- a/digital-finance/index.html
+++ b/digital-finance/index.html
@@ -42,10 +42,14 @@
       text-decoration: underline;
       color: #004a80;
     }
-    ul {
-      padding-left: 1.25rem;
-      margin-bottom: 2rem;
-    }
+  ul {
+    padding-left: 1.25rem;
+    margin: 0;
+    background: #e6f0fa;
+    border-radius: 6px;
+    padding: 1rem;
+  }
+
     li {
       margin-bottom: 0.5rem;
       background: #e6f0fa;
