--- a/digital-finance/index.html
+++ b/digital-finance/index.html
@@ -203,6 +203,7 @@
 
   <h2>📜 Certifications & Trainings</h2>
   <div class="certs-container">
+    <p><strong>AI & Machine Learning</strong></p>
     <ul>
       <li>
         <a href="AI elements.pdf" target="_blank" rel="noopener noreferrer">
@@ -231,6 +232,7 @@
     <div class="cert-card">
       <p><strong>Finance</strong></p>
       <ul>
+        <li>CFA - Chartered Financial Analyst</li>
         <li><a href="digital entrepreneurship.pdf" target="_blank" rel="noopener noreferrer">Digital Entrepreneurship</a></li>
         <li><a href="finops.pdf" target="_blank" rel="noopener noreferrer">FinOps</a></li>
       </ul>
