--- a/comms/index.html
+++ b/comms/index.html
@@ -198,8 +198,11 @@ This Powerdirector video was shot using pictures of lego scenes telling the stor
     ></iframe>
   </div>
 
-
-
+  <h2>📰 Press: Digitale Zeitung </h2>
+  <ul>
+     <a href="newspaper.pdf" target="_blank" rel="noopener noreferrer">Aktionen für die Umwelt
+</a>
+  </ul>
   <h2>🙋‍♀️ About me</h2>
   <ul>
      <a href="https://www.canva.com/design/DAGrJ-kt-TQ/HhVTtu6FsHMOXqpq6xIj4A/view?utm_content=DAGrJ-kt-TQ&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h652071f99c" target="_blank" rel="noopener noreferrer">Check out my CV
